--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^2.0.4",
+    "react-hook-form": "^7.51.3",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.1.0",
     "react-router-dom": "^6.23.0",
     "sort-by": "^1.2.0",
     "swiper": "^11.1.1"
